--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "framer-motion": "^12.23.3",
     "immutable": "^5.1.3",
     "lucide-react": "^0.525.0",
