--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dompurify": "^3.2.6",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "framer-motion": "^12.23.3",
     "immutable": "^5.1.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "rc-slider": "^11.1.8",
@@ -48,6 +50,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/draft-js": "^0.11.18",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
